--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <button class="botones">
             <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a>
         </button>
+        <button class="botones">
+            <a href="escritos.html" style="color: #fff;">COSAS QUE TE ESCRIBÍ</a>
+        </button>
     </div>
 
 </body>
