--- a/escritos.html
+++ b/escritos.html
@@ -93,6 +93,16 @@
         <option value="8">Poema 8</option>
         <option value="9">Poema 9</option>
         <option value="10">Poema 10</option>
+        <option value="11">Poema 11</option>
+        <option value="12">Poema 12</option>
+        <option value="13">Poema 13</option>
+        <option value="14">Poema 14</option>
+        <option value="15">Poema 15</option>
+        <option value="16">Poema 16</option>
+        <option value="17">Poema 17</option>
+        <option value="18">Poema 18</option>
+        <option value="19">Poema 19</option>
+        <option value="20">Poema 20</option>
     </select>
 
     <div id="file-content"></div>
