--- a/escritos.html
+++ b/escritos.html
@@ -183,6 +183,27 @@
         @media(max-width:800px){
             .tpl-snow > div:nth-of-type(36) ~ *{display:none;}
         }
+        /* Media Queries para tamaños de pantalla diferentes */
+        @media screen and (max-width: 600px) {
+            /* Estilos para pantallas pequeñas */
+            h1 {
+                font-size: 1.5em;
+            }
+        }
+        
+        @media screen and (min-width: 601px) and (max-width: 1024px) {
+            /* Estilos para pantallas medianas */
+            h1 {
+                font-size: 1.8em;
+            }
+        }
+        
+        @media screen and (min-width: 1025px) {
+            /* Estilos para pantallas grandes */
+            h1 {
+                font-size: 2em;
+            }
+        }
     </style>
 </head>
 <body>
