--- a/escritos.html
+++ b/escritos.html
@@ -32,7 +32,7 @@
         }
 
         .botones a{
-            background-color: #0a2be9;
+            background-color: #ee9612;
             padding: 9px;
             border-radius: 80px;
             color: azure;
@@ -54,7 +54,7 @@
         select {
             padding: 9px;
             border-radius: 80px;
-            background-color: #0a2be9;
+            background-color: #ee9612;
             color: azure;
             border: none;
             display: block;
