--- a/index.html
+++ b/index.html
@@ -183,12 +183,16 @@
     </div>
     <div class="button">
         <button class="botones">
-            <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a>
+            <a href="flower.html">CLICK AQUÍ</a>
         </button>
         <button class="botones">
-            <a href="escritos.html" style="color: #fff;">COSAS QUE TE ESCRIBÍ</a>
+            <a href="escritos.html">ESCRITOS</a>
+        </button>
+        <button class="botones">
+            <a href="dibujos.html">DIBUJOS</a>
         </button>
     </div>
+    
 
 </body>
 
